--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -26,9 +26,16 @@
 }
 
 .logo a {
-  font-size: 1.8rem;
-  font-weight: 700;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  text-decoration: none;
   color: var(--primary-color);
+}
+
+.logo img {
+  height: 50px; /* 로고 높이를 50px로 조정 */
+  width: auto;
 }
 
 .nav {
