--- a/src/components/home/HeroSection.module.css
+++ b/src/components/home/HeroSection.module.css
@@ -7,7 +7,7 @@
   justify-content: center;
   text-align: center;
   color: var(--white-color);
-  background: url('https://images.unsplash.com/photo-1488998527030-84871b5b51da?q=80&w=2070&auto=format&fit=crop') no-repeat center center/cover;
+  background: url('https://api.seongrim.o-r.kr/wp-content/uploads/2025/08/bg-church-1993645_1920.jpg') no-repeat center center/cover;
 }
 
 .heroOverlay {
@@ -16,7 +16,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .heroContent {
