--- a/src/pages/Welcome/Layout.module.css
+++ b/src/pages/Welcome/Layout.module.css
@@ -1,12 +1,9 @@
 .layoutContainer {
-  display: flex;
   max-width: 1200px;
-  margin: 40px auto;
-  padding: 0 20px;
-  gap: 40px;
+  margin: 0 auto; /* 상단 마진 제거 */
+  padding: 0; /* 좌우 여백 제거 */
 }
 
 .content {
-  flex-grow: 1;
   width: 100%;
 }
