--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -15,13 +15,23 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+.headerContainer {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.topBar {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0.5rem 0;
+  border-bottom: 1px solid var(--light-gray-color);
+}
+
 .headerContent {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 0 2rem;
   height: 70px;
 }
 
