--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -16,16 +16,15 @@
 }
 
 .headerContainer {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 0 2rem;
 }
 
 .topBar {
   display: flex;
   justify-content: flex-end;
-  padding: 0.5rem 0;
+  padding: 0.5rem 50px;
   border-bottom: 1px solid var(--light-gray-color);
+  background-color: #27372ecc
 }
 
 .headerContent {
@@ -33,6 +32,9 @@
   justify-content: space-between;
   align-items: center;
   height: 70px;
+    max-width: 1380px;
+    margin: 0 auto;
+    padding: 0 50px;
 }
 
 .logo a {
@@ -120,7 +122,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  color: #555;
+  color: #ffffff;
   transition: color 0.3s ease;
 }
 
@@ -130,6 +132,7 @@
 
 .utilityMenu span {
   font-size: 0.9rem;
+  color: #ffffff;
 }
 
 .menuToggle {
