--- a/src/components/home/HeroSection.module.css
+++ b/src/components/home/HeroSection.module.css
@@ -1,6 +1,6 @@
 .hero {
   position: relative;
-  height: 60vh;
+  height: 80vh;
   min-height: 400px;
   display: flex;
   align-items: center;
@@ -22,7 +22,7 @@
 .heroContent {
   position: relative;
   z-index: 2;
-  padding: 2rem;
+  padding:  8rem 2rem 2rem 2rem;
 }
 
 .subtitle {
